Updates from Overleaf

--- a/Ppt/250728_breakfast.tex
+++ b/Ppt/250728_breakfast.tex
@@ -263,14 +263,36 @@
         \item Equilibrium model of search and bargaining 
         \begin{itemize}
             \ite
-            \item Differentiated products   \hyperlink{slide:fig1}{\beamerbutton{Evidence}}
+            \item Differentiated products   \hyperlink{slide:fig3}{\beamerbutton{Evidence}}
             \item Imperfect-assymmetric competition\hyperlink{slide:fig3}{\beamerbutton{Evidence}}
             \item 
         \end{itemize}
         \item 
     \end{itemize}
+
+    \note{Diff products: if not the case then everyone would choose the highest offer
+    
+    Imperfect-assymmetric competition: the differences in market share can be due to preferences, but not so the differences in probability of even offering}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Answer the question}\label{slide:fig3}    
+
+Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly wages.
+
+\begin{figure}[H]
+%\caption{}
+\centering{}%
+\begin{tabular}{cc}
+\includegraphics[scale=0.27]{../figures/IE3_foregone_hist.png}
+\end{tabular}
+\end{figure}
+\end{frame}
+
+ %%%%%%%
+
+
+
 
 
 \begin{frame}{Answer the question}\label{slide:fig1}    
@@ -300,18 +322,6 @@ Firm specialization in groups
 Firms specialize on buyer types
 \end{frame}
 
-\begin{frame}{Answer the question}\label{slide:fig3}    
-
-Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly wages.
-
-\begin{figure}[H]
-%\caption{}
-\centering{}%
-\begin{tabular}{cc}
-\includegraphics[scale=0.27]{../figures/IE3_foregone_hist.png}
-\end{tabular}
-\end{figure}
-\end{frame}
  
 
 
