Updates from Overleaf

--- a/Ppt/250728_breakfast.tex
+++ b/Ppt/250728_breakfast.tex
@@ -315,7 +315,7 @@ Firm specialization in groups
 \caption{}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.24]{../figures/IE3_supply_offerprob_income_q.png}
+\includegraphics[scale=0.24]{../figures/IE3_supply_offerprob_income_q(2).png}
 \end{tabular}
 \end{figure}
 
