--- a/proposal.tex
+++ b/proposal.tex
@@ -184,6 +184,9 @@ For a motivation of what the SCOMP aimed to achieve and for further reforms afte
 \begin{itemize}
     \item In the US the MWR of contracts is in the range .7-.85 (\cite{noauthor_lecture_annuities_nodate}) whereas in Chile they are greater than 1 (\cite{quiroz_estudio_2018}). 
     \item 31\% of annuities in 2017 were for women and 69\% for men 
+
+
+    \item . Así, por ejemplo, se puede observar que una empresa en un año realizó la mejor oferta sólo un 2,3\% de las veces y se quedó con un 15,8\% de las rentas vitalicias. En el otro extremo, se observa que una empresa se ubicó en el primer lugar en un 29,5\% de los casos, pero sólo obtuvo 5,8\% de la participación de mercado. \textcite[p.13]{quiroz_estudio_2018}
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -449,7 +452,7 @@ The fixed cost is identified from the variation in choosing to apply for externa
 
 Once we estimated the parameters, we can answer the questions that we are interested in. 
 
-\textbf{Government guarantee}: we assume that implementing a government guarantee is equivalent to setting the credit rating of all the firms to the maximum possible level. We can use the model to change the product characteristics of the firms and use the model to estimate the changes in consumer welfare and to simulate what would be the impact of this policy on the interest rates set by the firms. 
+i\textbf{Government guarantee}: we assume that implementing a government guarantee is equivalent to setting the credit rating of all the firms to the maximum possible level. We can use the model to change the product characteristics of the firms and use the model to estimate the changes in consumer welfare and to simulate what would be the impact of this policy on the interest rates set by the firms. 
 
 \textcolor{red}{SOMETHING TO THINK ABOUT: IF I WANT TO ESTIMATE THE IMPACT OF THE GOV. GUARANTEE ON THE ANNUITIZATION RATE I NEED TO PREDICT THE SHARE OF PEOPLE WHO CHOOSE A PHASED WITHDRAWAL AND HOW THIS CHANGES WITH THE POLICY, BUT THIS PEOPLE DO NOT EVEN GET OFFERS, CURRENTLY THE MODEL PREDICTS CHOICES GIVEN OFFERS, BUT THERE IS NO MODEL FOR THE DECISION OF PHASED WITHDRAWAL VS. ANNUITY.  }
 
