--- a/empirical_v3.tex
+++ b/empirical_v3.tex
@@ -48,29 +48,21 @@ In this document I will present what we are learnign from out empirical work. Th
 
 \section{IE 4}
 
+\subsection{Elasticity of shoppers vs non-shoppers}
+
 The following table shows the coefficients of a conditional logit to test whether customers that ask for an external offer are more price elastic. Odd (even) columns run the specification on the sample with(without) external offers, which we think of as shoppers (non-shoppers). Once we control by the company fixed effects the shopers are more elastic. 
 
 \input{Tables/IE4/IE4_price_elasticity_clogit.tex}
  
-\newpage 
-
-
-
-
-
-
-
-
-Figure \ref{fig:ie0_0} shows the increase of requests over time. The increase is smooth with the exception of the year 2009 to 2010 that almost doubles. Probably there was a regulatory change. 
-On average consumers make 10.5 requests for different financial products.
  
+\subsection{Firms using more-less external offers}
 
 \begin{figure}[H]
 \caption{}
  \label{fig:ie4_1}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_int_ext_offers_by_cia.png} 
+\includegraphics[scale=0.17]{figures/IE4/IE4_int_ext_offers_by_cia.png} 
 \end{tabular}
 \end{figure}
 
@@ -79,7 +71,7 @@ On average consumers make 10.5 requests for different financial products.
  \label{fig:ie4_2and3}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_total_internal_offers_bycompany.png} & \includegraphics[scale=0.27]{figures/IE4/IE4_variation_share_external.png}
+\includegraphics[scale=0.17]{figures/IE4/IE4_total_internal_offers_bycompany.png} & \includegraphics[scale=0.17]{figures/IE4/IE4_variation_share_external.png}
 \end{tabular}
 \end{figure} 
 
@@ -94,7 +86,7 @@ Offers with better credit ratings make worse offers, this could reflect cost iss
  \label{fig:ie4_4}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_scatter_rating_offer.png} 
+\includegraphics[scale=0.17]{figures/IE4/IE4_scatter_rating_offer.png} 
 \end{tabular}
 \end{figure}
 
@@ -103,7 +95,7 @@ Offers with better credit ratings make worse offers, this could reflect cost iss
  \label{fig:ie4_5and6}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_binscatter_rating_offer.png} & \includegraphics[scale=0.27]{figures/IE4/IE4_box_rating_offer.png}
+\includegraphics[scale=0.17]{figures/IE4/IE4_binscatter_rating_offer.png} & \includegraphics[scale=0.17]{figures/IE4/IE4_box_rating_offer.png}
 \end{tabular}
 \end{figure}
 
@@ -123,12 +115,12 @@ Offers with better credit ratings make worse offers, this could reflect cost iss
  \label{fig:ie4_6and7}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_intermediary_search_box.png} 
+\includegraphics[scale=0.17]{figures/IE4/IE4_intermediary_search_box.png} 
 \end{tabular}
 \end{figure}
 
 \input{Tables/ie4/IE4_ttest_full.tex}
-
+\input{Tables/ie4/IE4_intermediary_choice.tex}
 
 \newpage
 
@@ -148,7 +140,7 @@ Offers with better credit ratings make worse offers, this could reflect cost iss
  \label{fig:ie4_7and8}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_external_offers_by_intermediary.png} & \includegraphics[scale=0.27]{figures/IE4/IE4_external_distribution_by_intermediary.png} 
+\includegraphics[scale=0.17]{figures/IE4/IE4_external_offers_by_intermediary.png} & \includegraphics[scale=0.17]{figures/IE4/IE4_external_distribution_by_intermediary.png} 
 \end{tabular}
 \end{figure} 
  
@@ -157,7 +149,7 @@ Offers with better credit ratings make worse offers, this could reflect cost iss
  \label{fig:ie4_9and10}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_external_acceptance_by_intermediary.png} 
+\includegraphics[scale=0.17]{figures/IE4/IE4_external_acceptance_by_intermediary.png} 
 \end{tabular}
 \end{figure} 
  
@@ -198,8 +190,8 @@ Offers with better credit ratings make worse offers, this could reflect cost iss
  \label{fig:ie4_11}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_highest_by_intermediary_type.png} 
-& \includegraphics[scale=0.27]{figures/IE4/IE4_highest_by_intermediary_type(2).png} 
+\includegraphics[scale=0.17]{figures/IE4/IE4_highest_by_intermediary_type.png} 
+& \includegraphics[scale=0.17]{figures/IE4/IE4_highest_by_intermediary_type(2).png} 
 \end{tabular}
 \end{figure} 
  
@@ -212,7 +204,7 @@ Offers with better credit ratings make worse offers, this could reflect cost iss
  \label{fig:ie4_11}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_highest_income_intermediary.png} & \includegraphics[scale=0.27]{figures/IE4/IE4_highest_income_external.png} 
+\includegraphics[scale=0.17]{figures/IE4/IE4_highest_income_intermediary.png} & \includegraphics[scale=0.17]{figures/IE4/IE4_highest_income_external.png} 
 \end{tabular}
 \end{figure} 
 
