--- a/Tables/IE4/IE4_search_by_intermediary_type.tex
+++ b/Tables/IE4/IE4_search_by_intermediary_type.tex
@@ -1,12 +1,27 @@
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 \caption{External Offers by Intermediary Type}
-\begin{tabular}{l*{2}{ccc}}
+\begin{tabular}{l*{1}{ccc}}
 \hline\hline
-            &        mean&          sd&       count&        mean&          sd&       count\\
+            &        mean&          sd&       count\\
 \hline
+Advisor     &            &            &            \\
+n\_external  &        1.88&        1.70&        3828\\
+chose\_external&        0.89&        0.31&        3828\\
 \hline
-\(N\)       &       21956&            &            &       21956&            &            \\
+Agent       &            &            &            \\
+n\_external  &        1.40&        1.19&        7220\\
+chose\_external&        0.92&        0.28&        7220\\
+\hline
+Direct (No intermediary)&            &            &            \\
+n\_external  &        1.09&        1.33&       10908\\
+chose\_external&        0.61&        0.49&       10908\\
+\hline
+Total       &            &            &            \\
+n\_external  &        1.33&        1.39&       21956\\
+chose\_external&        0.76&        0.43&       21956\\
+\hline
+\(N\)       &       21956&            &            \\
 \hline\hline
 \end{tabular}
 \end{table}
